Added AggregateMetric type to service design and implemented aggregating on the field level.
