# design/design.go
@@ -21,19 +21,28 @@ var AssetMetrics = Type("AssetMetrics", func() {
 	Attribute("mktcap", Float64, "Market cap of asset")
 })
 
+// AggregateMetrics is a user type for a single AssetMetrics record
+var AggregateMetrics = Type("AggregateMetrics", func() {
+	Attribute("aggName", String, "Aggregation name, e.g. tag, sector, etc.")
+	Attribute("aggValue", String, "Aggregation value, e.g. DeFi, FinTech, etc.")
+	Attribute("price", Float64, "Current spot price in USD")
+	Attribute("vlm24hr", Float64, "Volume traded over last 24 hours")
+	Attribute("chg24hr", Float64, "Change in price over last 24 hours")
+	Attribute("mktcap", Float64, "Market cap of asset")
+})
+
 var _ = Service("metrics", func() {
 	Method("asset", func() {
 		Payload(func() {
 			Attribute("slug", String)
 		})
 		Result(func() {
-			Attribute("metric", AssetMetrics)
-			// Can add additional metrics here...
+			Attribute("metrics", AssetMetrics)
 		})
 		HTTP(func() {
 			GET("/asset/{slug}")
 			Response(StatusOK, func() {
-				Body("metric")
+				Body("metrics")
 			})
 		})
 	})
@@ -43,8 +52,7 @@ var _ = Service("metrics", func() {
 			Attribute("sector", String)
 		})
 		Result(func() {
-			Attribute("metrics", ArrayOf(AssetMetrics), "aggregated metrics")
-			// Can add additional metrics here...
+			Attribute("metrics", AggregateMetrics)
 		})
 		HTTP(func() {
 			GET("/aggregate")
