# gen/http/openapi.yaml
@@ -32,9 +32,7 @@ paths:
         "200":
           description: OK response.
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/AssetMetrics'
+            $ref: '#/definitions/MetricsAggregateResponseBody'
       schemes:
       - http
   /asset/{slug}:
@@ -56,40 +54,45 @@ paths:
       schemes:
       - http
 definitions:
-  AssetMetrics:
-    title: AssetMetrics
+  AggregateMetricsResponseBody:
+    title: AggregateMetricsResponseBody
     type: object
     properties:
-      assetSlug:
+      aggName:
         type: string
-        description: Asset slug
-        example: Deleniti omnis.
+        description: Aggregation name, e.g. tag, sector, etc.
+        example: Aut et qui aut fuga rerum.
+      aggValue:
+        type: string
+        description: Aggregation value, e.g. DeFi, FinTech, etc.
+        example: Et quasi omnis voluptas.
       chg24hr:
         type: number
         description: Change in price over last 24 hours
-        example: 0.22824500320696345
+        example: 0.11664029684206616
         format: double
       mktcap:
         type: number
         description: Market cap of asset
-        example: 0.5357941098735186
+        example: 0.23486664093182105
         format: double
       price:
         type: number
         description: Current spot price in USD
-        example: 0.9974494704262243
+        example: 0.08459875106494068
         format: double
       vlm24hr:
         type: number
         description: Volume traded over last 24 hours
-        example: 0.2827616709063785
+        example: 0.18722809008973923
         format: double
     example:
-      assetSlug: Qui aut impedit ipsa omnis et.
-      chg24hr: 0.5116974205645489
-      mktcap: 0.0160442318077319
-      price: 0.7364241016375906
-      vlm24hr: 0.7527376846536737
+      aggName: Voluptatem ipsa architecto perspiciatis dolorem consectetur.
+      aggValue: Esse voluptatem aliquid repellat consequuntur temporibus.
+      chg24hr: 0.9929941525659658
+      mktcap: 0.7683673884901832
+      price: 0.9294245883312547
+      vlm24hr: 0.4013601690773143
   AssetMetricsResponseBody:
     title: AssetMetricsResponseBody
     type: object
@@ -97,33 +100,36 @@ definitions:
       assetSlug:
         type: string
         description: Asset slug
-        example: Distinctio doloribus ab a occaecati.
+        example: Aut impedit ipsa omnis.
       chg24hr:
         type: number
         description: Change in price over last 24 hours
-        example: 0.31418984381071996
+        example: 0.7527376846536737
         format: double
       mktcap:
         type: number
         description: Market cap of asset
-        example: 0.07264641436963874
+        example: 0.5116974205645489
         format: double
       price:
         type: number
         description: Current spot price in USD
-        example: 0.5287576957572823
+        example: 0.1887322179974729
         format: double
       vlm24hr:
         type: number
         description: Volume traded over last 24 hours
-        example: 0.9377502259503253
+        example: 0.7364241016375906
         format: double
     example:
-      assetSlug: Aut ea.
-      chg24hr: 0.5108998417217978
-      mktcap: 0.3382291708116491
-      price: 0.46584838432716885
-      vlm24hr: 0.1330519943929049
+      assetSlug: Voluptatem dolores ullam.
+      chg24hr: 0.6302778024860927
+      mktcap: 0.8351616005010166
+      price: 0.5812322433580285
+      vlm24hr: 0.6308128886420931
+  MetricsAggregateResponseBody:
+    title: MetricsAggregateResponseBody
+    $ref: '#/definitions/AggregateMetricsResponseBody'
   MetricsAssetResponseBody:
     title: MetricsAssetResponseBody
     $ref: '#/definitions/AssetMetricsResponseBody'
